# seedcamp

./: .dockerignore  .editorconfig  .env.example  .env.production.example  .env.staging.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  ISP_Network_Diagnostic_Report.md  JioFiber_Escalation_Email.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  cloudbuild-dashboard.yaml  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements-gcp.txt  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py  monitoring.py
app/models/: campaign_schemas.py  safety_schemas.py  schemas.py
app/routes/: campaigns.py
app/services/: batch_generator.py  brief_generator.py  cost_tracker.py  csv_parser.py  dry_run.py  firestore_client.py  memory_store.py  (+8 more)
dashboard/: README.md  app.py  app_backup_1771250482.py  app_old.py  config.py  sections.py
deploy/: .env.production.example  .env.staging.example  README.md
docs/: AGENTS.md  CHANGELOG.md  DEPLOY.md  DEPLOYMENT.md  QUICKSTART.md  logical-architecture.md  market-research.md  physical-architecture.md
examples/: README.md  basic-video-generation.py  batch-campaign.py  batch_campaign.py  generate_single_video.py
k8s/: deployment-api.yaml  service-api.yaml
scripts/: deploy-vke.sh
tests/: conftest.py
(+71 files in other folders)
